--- a/index2.html
+++ b/index2.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-  <script src="js/app.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div ng-app="">
-    <div ng-controller="bracketsCreator" class="container" style="width: 900px;margin: 0 auto;">
+  <div>
+    <div class="container" style="width: 900px;margin: 0 auto;">
 
     </div>
   </div>
+
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.2.1/lodash.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
