--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container" style="width: 900px;margin: 0 auto;">
 
-    <div class="round first">
+    <div class="round one">
       <div class="group">
         <div class="matches">
           <div class="match">
@@ -128,7 +128,7 @@
     </div>
 
 
-    <div class="round second">
+    <div class="round two">
 
       <div class="group">
         <div class="matches">
@@ -190,7 +190,7 @@
     </div>
 
 
-    <div class="round third">
+    <div class="round three">
 
       <div class="group">
         <div class="matches">
@@ -225,7 +225,7 @@
 
     </div>
 
-    <div class="round fourth">
+    <div class="round four">
 
       <div class="group">
         <div class="matches">
