--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body ng-app>
   <div>
     <div class="container" style="width: 900px;margin: 0 auto;">
 
@@ -14,6 +14,7 @@
 
   <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.2.1/lodash.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
   <script src="./js/app.js"></script>
 </body>
 </html>
