--- a/index2.html
+++ b/index2.html
@@ -5,10 +5,31 @@
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body ng-app>
+<body>
   <div>
     <div class="container" style="width: 900px;margin: 0 auto;">
 
+    </div>
+  </div>
+
+  <div class="popup-container">
+    <div class="popup">
+      <form action="/api/tournament/1/match">
+        <input type="hidden">
+        <div class="player-one">
+          <span class="player-name"></span>
+          <input type="number">
+          <input type="number">
+          <input type="number">
+        </div>
+        <div class="player-two">
+          <span class="player-name"></span>
+          <input type="number">
+          <input type="number">
+          <input type="number">
+        </div>
+        <button type="submit">Send form</button>
+      </form>
     </div>
   </div>
 
