Small changes in app.js and changing main index file

--- a/index.html
+++ b/index.html
@@ -2,253 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
-  <script src=""></script>
+  <title>Test</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container" style="width: 900px;margin: 0 auto;">
-
-    <div class="round one">
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one">
-              <span class="name">Werner Schlager</span>
-              <span class="score">2</span>
-            </div>
-            <div class="player two">
-              <span class="name">Jun Mizutanji</span>
-              <span class="score">3</span>
-            </div>
-          </div>
-        </div>
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two loser">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one loser">
-              <span class="name">Werner Schlager</span>
-              <span class="score">2</span>
-            </div>
-            <div class="player two">
-              <span class="name">Jun Mizutanji</span>
-              <span class="score">3</span>
-            </div>
-          </div>
-        </div>
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two loser">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one loser">
-              <span class="name">Werner Schlager</span>
-              <span class="score">2</span>
-            </div>
-            <div class="player two">
-              <span class="name">Jun Mizutanji</span>
-              <span class="score">3</span>
-            </div>
-          </div>
-        </div>
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two loser">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one loser">
-              <span class="name">Werner Schlager</span>
-              <span class="score">2</span>
-            </div>
-            <div class="player two">
-              <span class="name">Jun Mizutanji</span>
-              <span class="score">3</span>
-            </div>
-          </div>
-        </div>
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="round two">
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one">
-              <span class="name">Werner Schlager</span>
-              <span class="score">2</span>
-            </div>
-            <div class="player two">
-              <span class="name">Jun Mizutanji</span>
-              <span class="score">3</span>
-            </div>
-          </div>
-        </div>
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one">
-              <span class="name">Werner Schlager</span>
-              <span class="score">2</span>
-            </div>
-            <div class="player two">
-              <span class="name">Jun Mizutanji</span>
-              <span class="score">3</span>
-            </div>
-          </div>
-        </div>
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-    </div>
-
-
-    <div class="round three">
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
-
-
-    </div>
-
-    <div class="round four">
-
-      <div class="group">
-        <div class="matches">
-          <div class="match">
-            <div class="player one">
-              <span class="name">Jan-Ove Waldner</span>
-              <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
-            </div>
-          </div>
-        </div>
-
-        <div class="lines">
-          <div class="corner"></div>
-          <div class="connector"></div>
-        </div>
-      </div>
+  <div>
+    <div class="container" style="width: 900px;margin: 0 auto;">
 
     </div>
   </div>
 
+  <div class="popup-container">
+    <div class="popup">
+      <form action="/api/tournament/1/match">
+        <input type="hidden">
+        <div class="player-one">
+          <span class="player-name"></span>
+          <input type="number">
+          <input type="number">
+          <input type="number">
+        </div>
+        <div class="player-two">
+          <span class="player-name"></span>
+          <input type="number">
+          <input type="number">
+          <input type="number">
+        </div>
+        <button type="submit">Send form</button>
+      </form>
+    </div>
+  </div>
+
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.2.1/lodash.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
