Adding bye to first round

--- a/index1.html
+++ b/index1.html
@@ -12,14 +12,10 @@
     <div class="round one">
       <div class="group">
         <div class="matches">
-          <div class="match">
+          <div class="match bye">
             <div class="player one">
               <span class="name">Jan-Ove Waldner</span>
               <span class="score">3</span>
-            </div>
-            <div class="player two">
-              <span class="name">Chuen Chi Chuan</span>
-              <span class="score">2</span>
             </div>
           </div>
           <div class="match">
