Changing to angular and rebuilding basic layout

--- a/index.html
+++ b/index.html
@@ -2,40 +2,163 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Test</title>
+  <title>Document</title>
+  <script src=""></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>
-    <div class="container" style="width: 900px;margin: 0 auto;">
+  <div class="container" style="width: 900px;margin: 0 auto;">
+
+    <div class="tournament">
+
+      <div class="round one">
+
+
+        <div class="matches">
+
+          <div class="match-container">
+            <div class="match bye">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="match-container">
+            <div class="match">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="match-container">
+            <div class="match bye">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="match-container">
+            <div class="match">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="conectors-container">
+          <div class="connector">
+            <div class="bracket-connector"></div>
+            <div class="line-connector"></div>
+          </div>
+          <div class="connector">
+            <div class="bracket-connector"></div>
+            <div class="line-connector"></div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
+
+      <div class="round two">
+
+
+        <div class="matches">
+
+          <div class="match-container">
+            <div class="match bye">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="match-container">
+            <div class="match">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+        <div class="conectors-container">
+          <div class="connector">
+            <div class="bracket-connector"></div>
+            <div class="line-connector"></div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+      <div class="round three">
+
+
+        <div class="matches">
+
+          <div class="match-container">
+            <div class="match bye">
+              <div class="player one">
+                <span class="name">Werner Schlager</span>
+                <span class="score">2</span>
+              </div>
+              <div class="player two">
+                <span class="name">Jun Mizutanji</span>
+                <span class="score">3</span>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
 
     </div>
+
   </div>
 
-  <div class="popup-container">
-    <div class="popup">
-      <form action="/api/tournament/1/match">
-        <input type="hidden">
-        <div class="player-one">
-          <span class="player-name"></span>
-          <input type="number">
-          <input type="number">
-          <input type="number">
-        </div>
-        <div class="player-two">
-          <span class="player-name"></span>
-          <input type="number">
-          <input type="number">
-          <input type="number">
-        </div>
-        <button type="submit">Send form</button>
-      </form>
-    </div>
-  </div>
-
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.2.1/lodash.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
-  <script src="./js/app.js"></script>
 </body>
 </html>
