--- a/index.html
+++ b/index.html
@@ -2,163 +2,41 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
-  <script src=""></script>
+  <title>Test</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container" style="width: 900px;margin: 0 auto;">
+  <div ng-app="brackets-creator">
+    <div ng-controller="tournamentOrganizer" on-finish-render="ngRepeatFinished" class="container" style="width: 900px;margin: 0 auto;">
+      <div class="tournament">
 
-    <div class="tournament">
+        <div class="round" ng-repeat="round in rounds">
 
-      <div class="round one">
-
-
-        <div class="matches">
-
-          <div class="match-container">
-            <div class="match bye">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="match-container">
-            <div class="match">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
+          <div class="matches">
+            <div class="match-container" ng-repeat="match in round.matches">
+              <div class="match">
+                <div class="player" ng-hide="hidePlayer1($parent.$index, $index)">
+                  <span class="name">{{match.player_1.name}}</span>
+                  <span class="score"></span>
+                </div>
+                <div class="player" ng-hide="hidePlayer2($parent.$index, $index)">
+                  <span class="name">{{match.player_2.name}}</span>
+                  <span class="score"></span>
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="match-container">
-            <div class="match bye">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="match-container">
-            <div class="match">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-
-        <div class="conectors-container">
-          <div class="connector">
-            <div class="bracket-connector"></div>
-            <div class="line-connector"></div>
-          </div>
-          <div class="connector">
-            <div class="bracket-connector"></div>
-            <div class="line-connector"></div>
-          </div>
-        </div>
-
-
-      </div>
-
-
-
-
-
-      <div class="round two">
-
-
-        <div class="matches">
-
-          <div class="match-container">
-            <div class="match bye">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="match-container">
-            <div class="match">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-
-        <div class="conectors-container">
-          <div class="connector">
-            <div class="bracket-connector"></div>
-            <div class="line-connector"></div>
-          </div>
-        </div>
-
-
-      </div>
-
-
-      <div class="round three">
-
-
-        <div class="matches">
-
-          <div class="match-container">
-            <div class="match bye">
-              <div class="player one">
-                <span class="name">Werner Schlager</span>
-                <span class="score">2</span>
-              </div>
-              <div class="player two">
-                <span class="name">Jun Mizutanji</span>
-                <span class="score">3</span>
-              </div>
-            </div>
-          </div>
 
         </div>
 
       </div>
-
     </div>
-
   </div>
 
+  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.2.1/lodash.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
