Trying to get connectors to work

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
             </div>
           </div>
 
+          <div class="conectors-container">
+            <div class="connector" ng-repeat="a in getConnectorsNumber($parent.$index)">
+              <div class="bracket-connector"></div>
+              <div class="line-connector"></div>
+            </div>
+          </div>
 
         </div>
 
