--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
         <div class="round" ng-repeat="round in rounds">
 
           <div class="matches">
-            <div class="ng-class: byeClass($parent.$index, $index);" ng-repeat="match in round.matches">
+            <div class="match-container" ng-class="byeClass($parent.$index, $index);" ng-repeat="match in round.matches">
               <div class="match">
-                <div class="player" ng-hide="hidePlayer1($parent.$index, $index)">
+                <div class="player" ng-if="match.player_1">
                   <span class="name">{{match.player_1.name}}</span>
                   <span class="score"></span>
                 </div>
-                <div class="player" ng-hide="hidePlayer2($parent.$index, $index)">
+                <div class="player" ng-if="match.player_2">
                   <span class="name">{{match.player_2.name}}</span>
                   <span class="score"></span>
                 </div>
