Fixing the $index in getConnectorsNumber

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
 
           <div class="conectors-container">
-            <div class="connector" ng-repeat="a in getConnectorsNumber($parent.$index)">
+            <div class="connector" ng-repeat="a in getConnectorsNumber($index)">
               <div class="bracket-connector"></div>
               <div class="line-connector"></div>
             </div>
