--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             </div>
           </div>
 
-          <div class="conectors-container">
+<!--           <div class="conectors-container">
             <div class="connector" ng-repeat="a in getConnectorsNumber($index)">
               <div class="bracket-connector"></div>
               <div class="line-connector"></div>
             </div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
+  <!-- // <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script> -->
   <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.2.1/lodash.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
   <script src="js/app.js"></script>
