--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div ng-app="brackets-creator">
-    <div ng-controller="tournamentOrganizer" on-finish-render="ngRepeatFinished" class="container" style="width: 900px;margin: 0 auto;">
+    <div ng-controller="tournamentOrganizer" class="container" style="width: 900px;margin: 0 auto;">
       <div class="tournament">
 
         <div class="round" ng-repeat="round in rounds">
