--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
 
           <div class="conectors-container">
-            <div class="connector" ng-repeat="a in getConnectorsNumber(this.round.matches.length)">
+            <div class="connector" ng-repeat="a in getConnectorsNumber(round.matches.length)">
               <div class="bracket-connector"></div>
               <div class="line-connector"></div>
             </div>
