Making input for results

--- a/index1.html
+++ b/index1.html
@@ -35,6 +35,24 @@
                 <span class="name">Jun Mizutanji</span>
                 <span class="score">3</span>
               </div>
+              <div class="set-results">
+                <table>
+                  <tr>
+                    <td tab-index='0'><input type="number" max="11" min="0"></td>
+                    <td tab-index='1'><input type="number" max="11" min="0"></td>
+                    <td tab-index='2'><input type="number" max="11" min="0"></td>
+                    <td tab-index='3'><input type="number" max="11" min="0"></td>
+                    <td tab-index='4'><input type="number" max="11" min="0"></td>
+                  </tr>
+                  <tr>
+                    <td tab-index='0'><input type="number" max="11" min="0"></td>
+                    <td tab-index='1'><input type="number" max="11" min="0"></td>
+                    <td tab-index='2'><input type="number" max="11" min="0"></td>
+                    <td tab-index='3'><input type="number" max="11" min="0"></td>
+                    <td tab-index='4'><input type="number" max="11" min="0"></td>
+                  </tr>
+                </table>
+              </div>
             </div>
           </div>
 
